<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.justjava.MainActivity">
        <EditText
            android:id="@+id/txt_customer_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_name"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:inputType="textCapWords"
             />
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_toppings"
            style="@style/HeaderTextStyle"/>
            <CheckBox
            android:id="@+id/whipped_chkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_whipped"
            android:paddingLeft="@dimen/padding_chkbox"
            android:textSize="16sp"
            android:buttonTint="@color/colorCheckedChkbox"
            android:layout_marginBottom="16dp"
            />
            <CheckBox
            android:id="@+id/chocolate_chkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_chocolate"
            android:paddingLeft="@dimen/padding_chkbox"
            android:textSize="16sp"
            android:buttonTint="@color/colorCheckedChkbox"
            android:layout_marginBottom="16dp"
            />
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_quantity"
            style="@style/HeaderTextStyle"/>
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:onClick="submitIncrement"
                android:text="@string/but_increment"/>
                <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txt_quantity_number"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"/>
                <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:onClick="submitDecrement"
                android:text="@string/but_decrement"/>
        </LinearLayout>
            <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_price"
            style="@style/HeaderTextStyle"/>-->
           <!-- <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_price_number"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"/>-->
            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/but_order"/>

    </LinearLayout>
</ScrollView>